# OpenEnv

./: .gitignore  mvp.md
data/: apex_tool_analysis.json  apex_v1_extended_analysis.json
docs/design_docs/: asethics.md
envs/apex_env/: Dockerfile  pyproject.toml
envs/apex_env/server/: app.py  task_loader.py
envs/refactor_env/: .gitignore  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/refactor_env/server/: Dockerfile  __init__.py  app.py  metrics.py  refactor_environment.py
envs/refactor_env/target_repo/: api_check.py
envs/refactor_env/target_repo/core/: __init__.py  processor.py
envs/refactor_env/target_repo/tests/: test_all.py
envs/refactor_env/target_repo/utils/: __init__.py  date_helpers.py  string_helpers.py
envs/style_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/style_env/frontend_template/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
envs/style_env/frontend_template/src/: App.tsx
envs/style_env/frontend_template/src/components/ui/: .gitkeep  Badge.tsx  Button.tsx  Input.tsx  Table.tsx
envs/style_env/frontend_template/src/pages/: .gitkeep  Dashboard.tsx  Home.tsx  Users.tsx
envs/style_env/frontend_template/src/theme/: product_profiles.ts  tokens.ts
envs/style_env/prompts/: prompts.jsonl
envs/style_env/server/: Dockerfile  __init__.py  app.py  style_environment.py
envs/style_env/server/scorers/: __init__.py  component_reuse_scorer.py  diff_discipline_scorer.py  lint_scorer.py  token_scorer.py
examples/: model_comparison.py  refactor_simple.py  style_simple.py
hackathon/: ApexEnvironment.html  WEBSITE_SPEC.md  app.py  dashboard.html  design_doc.md  modal_apex_grpo_msswift.py  modal_apex_grpo_unsloth.py  progress.md  requirements.txt  task_tracker.md
hackathon/data/: apex_grpo.json  demo_result.json  eval_30b_v2.json  eval_deepseek_v3_20tasks.json  eval_glm45_20tasks.json  eval_gpt54_20tasks.json  eval_next_v3_20tasks.json  eval_qwen3-coder-30b-a3b-instruct.json  eval_qwen3-coder-free.json  eval_v4_deepseek.json  eval_v4_gpt4omini.json  eval_v4_kimik2.json  eval_v4_sonnet.json  tiered_eval_gpt-4o-mini.json  tiered_eval_sandbox_test.json
hackathon/eval/: baseline_eval.py
hackathon/eval/results/: baseline_qwen_qwen3-coder-next_20260307_010054.jsonl
hackathon/harbor_adapter/: adapter.py  run_adapter.py
hackathon/harbor_adapter/template/: instruction.md  task.toml
hackathon/public/: index.html
hackathon/scripts/: baseline_eval.py  convert_to_tool_calling.py  eval_handdraw_batch.py  extract_html.py  extract_scores.py  inline_elements.py  run_demo.py  tiered_eval.py  train_grpo.py
hackathon/server_space/: Dockerfile  app.py  requirements.txt
hackathon/tests/: test_apex_environment.py
hackathon/train/: modal_grpo.py  test_rollout.py
(+48 files in other folders)
